refactor: 專案健康度改善第二輪 Batch 1-4 完成 (8.4 → 8.7)
架構收尾:
- User 表加 (provider, provider_id) 複合索引優化 OAuth 登入查詢
- TodoWebController 改用 BaseWebController 的 findCurrentMember/canEdit
- DocumentService.getDocumentForPreview() 改回傳 DocumentPreviewInfo DTO
- 消除 ActivityApiController/ChatApiController 的 requireUserId() 重複
- 業務例外日誌等級從 log.error 降為 log.warn（無 stack trace）
- WebExceptionHandler 隱藏內部錯誤訊息

效能進階:
- GlobalExpenseService.getUnsettledTrips N+1 批次修復 (2N+2 → 3 次查詢)
- 新增 HttpClientConfig: Apache HttpClient 5 + 連線池 (max 50, per-route 10)
- 4 個外部 Client 改用共享連線池 RestTemplate
- GoogleMapsClientImpl 新增 Circuit Breaker (5 failures → open, 5min cooldown)

前端清理:
- 清除模板中所有 console.error/warn 殘留
- alert() 全數改為 Toast.error()

測試補強 (1069 → 1100):
- 新增 ExchangeRateApiClientTest (13 tests)
- 新增 SupabaseStorageClientTest (18 tests)

含先前審查改善: TripViewHelper 提取、StatisticsCacheDelegate、
GeoUtils/FileValidationUtils 統一、HSTS/Session Fixation、
HTTP 壓縮、ExpenseService N+1 修復等